server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fl-server-service
spec:
  selector:
    app: fl-server
  ports:
  - protocol: TCP
    port: 58000
    targetPort: 58000
